[package]
name = "fast_streaming_commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
hex = "0.4.3"
serde = { version = "1.0.127", features = ["derive"] }
bincode = "1.3.3"
postcard = { version = "0.7.2", features=["alloc"] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
test-env-log = "0.2.7"
env_logger = "*"
rand = "0.8.4"
rand_pcg = "0.3.1"